Now Router can work with id stuff. Added BlogsView, blogs.json, props and JumpIn. YES I KNOW IT LOOKS TERRIBLE BUT ILL FIX IT LATER.

--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,9 @@ body {
 .navbar .logo {
     font-size: 22px;
     font-weight: bold;
+    color: #ecf0f1;
+    text-decoration: none;
+    transition: color 0.3s;
 }
 
 .nav-links {
@@ -122,6 +125,13 @@ body {
     margin-bottom: 15px;
     font-size: 22px;
     color: #333;
+}
+
+.home-content {
+    max-width: 1000px;
+    margin: 40px auto;
+    padding: 20px;
+    min-width: 70%;
 }
 
 .uploads-list {
